--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,19 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name="com.billdoerr.android.carputer.GlobalVariables"
+        android:name="com.billdoerr.android.carputer.utils.GlobalVariables"
         android:allowBackup="true"
         android:icon="@drawable/ic_android_auto_logo"
         android:logo="@drawable/ic_android_auto_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_android_auto_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
 		android:launchMode="singleTop"
         android:usesCleartextTraffic="true"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity 
-		    android:name=".CarputerActivity"
+		    android:name=".activities.CarputerActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,12 +29,12 @@
             </intent-filter>
         </activity>
 		<activity
-            android:name=".CameraActivityMjpeg"
+            android:name=".activities.CameraActivityMjpeg"
             android:label="@string/activity_title_camera">
         </activity>
 
         <activity
-            android:name=".CameraActivityMotionEye"
+            android:name=".activities.CameraActivityMotionEye"
             android:label="@string/activity_title_camera_motioneye">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -47,11 +47,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CameraActivityImageArchive"
+            android:name=".activities.CameraActivityImageArchive"
             android:label="@string/activity_title_camera_image_archive">
         </activity>
         <activity
-            android:name=".CarputerActivityMgmt"
+            android:name=".activities.CarputerActivityMgmt"
             android:label="@string/activity_title_carputer_mgmt">
         </activity>
         <activity
@@ -60,7 +60,7 @@
             android:theme="@style/AppTheme">
         </activity>
         <activity
-            android:name=".CarputerActivityAbout"
+            android:name=".activities.CarputerActivityAbout"
             android:label="@string/activity_title_about">
         </activity>
         <provider
